2002-05-15  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-after-cursor-move-hook): Add `w3m-auto-show'.
	(w3m-auto-show, w3m-horizontal-scroll-division): New options.
	(w3m-next-anchor, w3m-previous-anchor, w3m-next-form)
	(w3m-previous-form, w3m-next-image, w3m-previous-image): Call
	`w3m-horizontal-on-screen'.
	(w3m-mode): Bind many variables for automatic scrolling when
	`w3m-auto-show' is non-nil.
	(w3m-scroll-left, w3m-scroll-right, w3m-shift-left)
	(w3m-shift-right): Call `w3m-horizontal-scroll'.
	(w3m-horizontal-scroll-done): New buffer local variable.
	(w3m-current-position): Modify initial value.
	(w3m-auto-show, w3m-horizontal-scroll, w3m-horizontal-on-screen):
	New functions.
	(w3m-horizontal-recenter, w3m-beginning-of-line)
	(w3m-end-of-line): Use `w3m-set-window-hscroll' and
	`w3m-current-column'.
	(w3m-store-current-position): Set markers of beginning of line and
	end of line.
	(w3m-check-current-position): Check car of `w3m-current-position'.
	(w3m-current-column, w3m-set-window-hscroll): New functions to
	rescue for XEmacs with Mule.
	
2002-05-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-form.el (w3m-form-replace): Don't pad the form slot with
	spaces if a string is longer than that width.

2002-05-14  SAITO Takuya <reed@lily.freemail.ne.jp>

	* shimbun/sb-vinelinux.el (shimbun-vinelinux-group-path-alist): Add
	entry for Vine Linux 2.5 errata.
	(shimbun-vinelinux-group-path-alist1): Remove.
	(shimbun-get-headers): Don't retrieve index twice.

2002-05-14  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-arrived-p): Move its definition in order to avoid
	byte-compile warning.

	* Makefile.in (default, what-where): Change order.

2002-05-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3mhack.el: Modify the error message that XEmacs APEL package
	versions 1.23 and later can barely be used to run emacs-w3m.

2002-05-14  Yuuichi Teranishi  <teranisi@gohome.org>

	* shimbun/sb-2ch.el (shimbun-2ch-parse-page): Add `ID:' to the From